# libkolibre-profileservice

./: AUTHORS  Makefile.am  README  README.md  configure.ac  doxygen.cfg  doxygen.cfg.in  libkolibre-profile.pc.in  mainpage.dox
patches/: axis2c-1.6.0_curl_ssl.patch  axis2c-1.6.0_curl_useragent.patch  axis2c-1.6.0_ssl_utils.patch  axis2c-1.6.0_xml_https.patch
src/: Makefile.am  Package.cpp  Package.h  PackageList.cpp  PackageList.h  ProfileServiceHandler.cpp  ProfileServiceHandler.h  axis2c_client_home.h.in
src/stubs/: Kolibre_ProfileClient.vcproj  Makefile.am  axis2_prf_extension_mapper.c  axis2_prf_extension_mapper.h  axis2_stub_Kolibre_Profile.c  axis2_stub_Kolibre_Profile.h  prf_getAttribute.c  prf_getAttribute.h  prf_getAttributeResponse.c  prf_getAttributeResponse.h  prf_getAttributeResponseType.c  prf_getAttributeResponseType.h  prf_getAttributeType.c  prf_getAttributeType.h  prf_internalServerErrorFault.c  prf_internalServerErrorFault.h  prf_internalServerErrorFaultType.c  prf_internalServerErrorFaultType.h  prf_invalidParameterFault.c  prf_invalidParameterFault.h  prf_invalidParameterFaultType.c  prf_invalidParameterFaultType.h  prf_logOff.c  prf_logOff.h  prf_logOffResponse.c  prf_logOffResponse.h  prf_logOffResponseType.c  prf_logOffResponseType.h  prf_logOffType.c  prf_logOffType.h  prf_logOn.c  prf_logOn.h  prf_logOnResponse.c  prf_logOnResponse.h  prf_logOnResponseType.c  prf_logOnResponseType.h  prf_logOnType.c  prf_logOnType.h  prf_noActiveSessionFault.c  prf_noActiveSessionFault.h  (+24 more)
tests/: Makefile.am  fakesoapresponder.sh  soaptester.sh  ssl-private-key.key  ssl-server-crt.crt  ssl-server-csr.csr
tests/profile-service-01/: Makefile.am  errorinvaliduri.cpp  errornonetwork.cpp  errornonetwork.sh  faultinternalservererror.cpp  faultinternalservererror.sh  faultinvalidparameter.cpp  faultinvalidparameter.sh  faultnoactivesession.cpp  faultnoactivesession.sh  getattribute.cpp  getattribute.sh  logoff.cpp  logoff.sh  logon.cpp  logon.sh  memoryleak.cpp  memoryleak.sh  memoryleak.supp  querypackagelist.cpp  querypackagelist.sh  setattribute.cpp  setattribute.sh  setup_logging.h
tests/profile-service-01/faults/internalServerError/: 1_logOn  2_setAttribute  3_getAttribute  4_queryPackageList  5_logOff
tests/profile-service-01/faults/invalidParameter/: 1_setAttribute  2_getAttribute  3_queryPackageList
tests/profile-service-01/faults/noActiveSession/: 1_setAttribute  2_getAttribute  3_queryPackageList  4_logOff
tests/profile-service-01/getAttribute/: 1_getAttribute  2_getAttribute
tests/profile-service-01/logOff/: 1_logOff  2_logOff
tests/profile-service-01/logOn/: 1_logOn  2_logOn
tests/profile-service-01/memoryLeak/: 2_setAttribute  4_queryPackageList
tests/profile-service-01/setAttribute/: 2_setAttribute
wsdl/: axis2_codegen_error_on_deserialize_failure.patch  axis2_codegen_failure_before_return_null.patch  axis2_codegen_free_memory_after_attribute_parse.patch  axis2_codegen_free_memory_created_namespace.patch  axis2_codegen_free_memory_wrapper_adb_obj.patch  axis2_codegen_parse_soap_fault_reason.patch  axis2_codegen_stop_deserialize_on_missing_attribute.patch  axis2_codegen_type_name_changes.patch  generate-stubs.sh  install-codegen.sh  license.txt  profile-service-01.wsdl  stubs_axis2_stubs-warnings.patch
